tree-sitter-udon/test/corpus/elements.txt
================================================================================
Simple element
================================================================================

|article

--------------------------------------------------------------------------------

(document
  (element
    (element_name
      (identifier))))

================================================================================
Element with ID
================================================================================

|section[intro]

--------------------------------------------------------------------------------

(document
  (element
    (element_name
      (identifier))
    (element_id
      (bracket_bare_string))))

================================================================================
Element with class
================================================================================

|div.container

--------------------------------------------------------------------------------

(document
  (element
    (element_name
      (identifier))
    (element_class
      (identifier))))

================================================================================
Element with multiple classes
================================================================================

|div.container.wide.primary

--------------------------------------------------------------------------------

(document
  (element
    (element_name
      (identifier))
    (element_class
      (identifier))
    (element_class
      (identifier))
    (element_class
      (identifier))))

================================================================================
Element with ID and classes
================================================================================

|section[main].content.wide

--------------------------------------------------------------------------------

(document
  (element
    (element_name
      (identifier))
    (element_id
      (bracket_bare_string))
    (element_class
      (identifier))
    (element_class
      (identifier))))

================================================================================
Element with suffix modifier
================================================================================

|field?

--------------------------------------------------------------------------------

(document
  (element
    (element_name
      (identifier))
    (element_suffix)))

================================================================================
Element with ID and suffix
================================================================================

|field[name]!

--------------------------------------------------------------------------------

(document
  (element
    (element_name
      (identifier))
    (element_id
      (bracket_bare_string))
    (element_suffix)))

================================================================================
Anonymous element with ID only
================================================================================

|[main-content]

--------------------------------------------------------------------------------

(document
  (element
    (element_id
      (bracket_bare_string))))

================================================================================
Anonymous element with class only
================================================================================

|.defaults

--------------------------------------------------------------------------------

(document
  (element
    (element_class
      (identifier))))

================================================================================
Quoted element name
================================================================================

|'my-weird:name'

--------------------------------------------------------------------------------

(document
  (element
    (element_name
      (quoted_identifier))))
